# cipher

./: launch-frontend.command  pyproject.toml
.claude/: launch.json  settings.local.json
backtest/: runner.py  runner_allrounder.py  runner_day_high.py  runner_day_high_spot.py  runner_day_high_v4.py  runner_day_high_v5.py  runner_day_high_v6.py  runner_day_high_v7.py  runner_day_high_vix.py  runner_directional_op.py  runner_multilegdm.py  runner_multilegdm_v2.py  runner_multilegdm_v3.py  runner_multilegdm_v4.py  runner_mv3.py  runner_vanilla.py  runner_vwap_sd_straddles.py  runner_vwap_sd_straddles_v2.py  runner_vwap_sd_straddles_v3.py
config/: dhan_live.toml
frontend/: next.config.ts  package-lock.json  package.json
lib/: data_utils.py  nautilus_data.py  reporting.py
logs/: run_bt.sh  run_full_all_versions.sh  run_sequential.sh  run_v7_after_v6.sh
scripts/: live_manager.py  prepare_allrounder_data.py  prepare_day_high_data.py  prepare_day_high_versioned.py  prepare_frontend_data.py  prepare_multilegdm_data.py  prepare_multilegdm_intraday.py  prepare_multilegdm_mtm.py  prepare_vanilla_data.py  prepare_vwap_sd_charts.py  prepare_vwap_sd_straddles_data.py  run_april_2025_all_versions.py  run_crude.py  run_live.py
strategies/: atm_straddle_sell.py  day_high_otm_sell.py  day_high_otm_sell_v4.py  day_high_otm_sell_v5.py  day_high_otm_sell_v6.py  day_high_otm_sell_v7.py  day_high_spot_sell.py  day_high_vix_straddle_sell.py  directional_op_sell.py  index_allrounder.py  multi_leg_dm.py  mv3_credit_spread.py  vanilla_straddle.py  vwap_sd_straddles.py  (+2 more)
(+198 files in other folders)
