[project]
name = "cipher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "dhanhq>=2.0",
    "nautilus-trader>=1.224.0",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
]
